--- a/compose.yaml
+++ b/compose.yaml
@@ -10,8 +10,9 @@ services:
       SERVER_PORT: 8087
       SIGN_SERVICE_HOST: http://trafficsignservice:8085
       ROAD_SERVICE_HOST: http://roadservice:8084
-      ACCESS_SERVICE_TRAFFICDT_HOST: http://trafficdt:8152
-      ACCESS_SERVICE_SEMAPHOREDT_HOST: http://dtsemaphore:8094
+      ROAD_SERVICE_TRAFFICDT_HOST: http://trafficdt:8152
+      ROAD_SERVICE_SEMAPHOREDT_HOST: http://dtsemaphore:8094
+      ROAD_SERVICE_SEMAPHOREDT_ADMINHOST: http://dtsemaphore:8093
     depends_on:
       mongodb1:
         condition: service_healthy
@@ -30,7 +31,7 @@ services:
       SIGN_SERVICE_HOST: http://trafficsignservice:8085
       ROAD_SERVICE_HOST: http://roadservice:8084
       ACCESS_SERVICE_TRAFFICDT_HOST: http://trafficdt:8152
-      ACCESS_SERVICE_SEMAPHOREDT_HOST: http://dtsemaphore:8094
+      ACCESS_SERVICE_SEMAPHOREDT_HOST: http://dtsemaphore:8093
     depends_on:
       mongodb1:
         condition: service_healthy
@@ -113,6 +114,7 @@ services:
       retries: 5
     networks:
       mqtt-broker:
+      default:
 
   trafficdt:
     image: ghcr.io/smart-assistant-drive/trafficdt:latest
